2010-06-15  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb: rename OCI8::Metadata::Column#type_string
	    to #data_type_string and add an alias from the former to the
	    latter. fix a return value of OCI8::Metadata::Column#data_type_string
	    of REF datatype.
	* test/test_metadata.rb: rename a test method test_metadata to
	    test_column_metadata and do refactoring to make test data
	    reusable for other metadata classes in future.

2010-06-13  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: fix a private method
	    OCI8::Metadata::Base#__param to return nil when the specified
	    attribute is NULL.
	* lib/oci8/metadata.rb: add rdoc comment of OCI8::Metadata::Type
	    and fix other typos. change OCI8::Metadata::Schema#all_objects
	    not to raise "ORA-24372: invalid object for describe" by
	    invalid objects.
	* test/test_metadata.rb: add tests for OCI8::Metadata::Type.

2010-06-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb: rename OCI8::Metabase::ProcBase to
	    OCI8::Metabase::Subprogram, add #is_standalone? and change
	    #obj_id, #obj_name and #obj_schema to work for packaged
	    subprograms. Fix rdoc comments.
	* test/test_metadata.rb: add tests for OCI8::Metadata::Function,
	    OCI8::Metadata::Procedure and OCI8::Metadata::Package.

2010-06-10  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb: revice rdoc comments of OCI8::Metadata::Table
	    and OCI8::Metadata::View and delete some unavailable methods
	    of OCI8::Metadata::View.
	* test/test_metadata.rb: add tests for OCI8::Metadata::Table and
	    OCI8::Metadata::View.
	* README: change the description about the privilege to run tests.
	    'create view' privilege is needed to test OCI8::Metadata::View.

2010-06-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.c, lib/oci8.rb.in: move
	    the location where OCI8::VERSION is defined from oci8.rb to
	    oci8lib_*.so. Add code to check the version of oci8.rb and