@@ -1,3 +1,7 @@
+2010-08-15  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/apiwrap.yml, ext/oci8/lob.c: fix memory leak when temporary
+	    lobs are used.
+
 2010-06-15  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/oci8/metadata.rb: rename OCI8::Metadata::Column#type_string
 	    to #data_type_string and add an alias from the former to the
